--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-REACT_APP_DEFAULTAUTH=fake
+REACT_APP_DEFAULTAUTH=jwt
 
-REACT_APP_APIKEY=
+# REACT_APP_URL=https://exciting-blackburn.142-93-209-108.plesk.page
+REACT_APP_URL=http://localhost:1337/api
 REACT_APP_AUTHDOMAIN=
 REACT_APP_DATABASEURL=
 REACT_APP_PROJECTID=
