--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "i18next-browser-languagedetector": "^6.1.1",
     "install": "^0.13.0",
     "jspdf": "^2.5.1",
-    "leaflet": "^1.7.1",
+    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
     "metismenujs": "^1.3.0",
@@ -75,6 +75,7 @@
     "react-input-mask": "^2.0.4",
     "react-jvectormap": "^0.0.16",
     "react-leaflet": "^2.7.0",
+    "react-leaflet-cluster": "^2.1.0",
     "react-meta-tags": "^1.0.1",
     "react-modal-video": "^1.2.7",
     "react-native-inline-datepicker": "^1.2.0",
